force-app/main/default/objects/Campaign_Member_Log__c/Campaign_Member_Log__c.object-meta.xml
<CustomObject>
    <label>Campaign Member Log</label>
    <nameField>
        <label>Campaign Member Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Member Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>