force-app/main/default/objects/Campaign_Member_Log__c/fields/NSSales_Action__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Action__c</fullName>
    <label>Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>