force-app/main/default/objects/Campaign_Member_Log__c/fields/NSSales_Audit_Date__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Audit_Date__c</fullName>
    <label>Audit Date</label>
    <type>Date</type>
</CustomField>