force-app/main/default/objects/Campaign_Member_Log__c/fields/NSSales_Campaign__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Member Log</relationshipLabel>
    <relationshipName>Campaign_Member_Log</relationshipName>
    <type>Lookup</type>
</CustomField>