force-app/main/default/objects/Campaign_Member_Log__c/fields/NSSales_Campaign_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Campaign_Member_Name__c</fullName>
    <label>Campaign Member Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>