force-app/main/default/objects/Campaign_Member_Log__c/fields/NSSales_Company__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Company__c</fullName>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>