force-app/main/default/objects/Campaign_Member_Log__c/fields/NSSales_Email__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Email__c</fullName>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>