force-app/main/default/objects/Campaign_Member_Log__c/fields/NSSales_First_Name__c.field-meta.xml
<CustomField>
    <fullName>NSSales_First_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>