force-app/main/default/objects/Campaign_Member_Log__c/fields/NSSales_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Last_Name__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>