force-app/main/default/objects/Campaign_Member_Log__c/fields/NSSales_Object__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Object__c</fullName>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>