force-app/main/default/objects/Campaign_Member_Log__c/fields/NSSales_Old_Value__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Old_Value__c</fullName>
    <label>Old Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>