force-app/main/default/objects/Campaign_Member_Log__c/fields/NSSales_Phone__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Phone__c</fullName>
    <label>Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>