force-app/main/default/objects/Campaign_Member_Log__c/fields/NSSales_Role__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Role__c</fullName>
    <label>Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>