force-app/main/default/objects/Campaign_Member_Log__c/fields/NSSales_Status__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>