force-app/main/default/objects/Campaign_Member_Log__c/fields/NSSales_Type__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>